Make various changes to prime factorization, divisibility, and GCD and LCM classes, test classes, and info in README